--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMEL7GJc70MNHx/bWttr8P8"
+      "authorship_tag": "ABX9TyOPia57L/iaOC9RhBTJ1J8i",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/dubeyshubham786/Hacker_rank_Python/blob/main/HackerRank_Problem.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "WbcJbwer6IXG"
       },
       "source": [
@@ -26,9 +37,54 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8aoPKIwA8Rys"
+      },
+      "source": [
+        "### **Problem 1**. Print \"Hello, World!\""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "PJ3lhqdP5kI9"
+        "id": "PJ3lhqdP5kI9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f290faa-c838-4253-e111-6b96a25aa96c"
+      },
+      "source": [
+        "print(\"Hello, World!\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello, World!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RgXXzy2A8ydf"
+      },
+      "source": [
+        "###**Problem 2.** Given an integer,n, perform the following conditional actions:\n",
+        "###If n is odd, print 'Weird'\n",
+        "###If n is even and in the inclusive range of 2 to 5, print 'Not Weird'\n",
+        "###If n is even and in the inclusive range of 6 to 20, print 'Weird'\n",
+        "###If n is even and greater than 20 , print 'Not Weird'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cmo7lYts8xbs"
       },
       "source": [
         ""
