--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOPia57L/iaOC9RhBTJ1J8i",
+      "authorship_tag": "ABX9TyPqiRHqMR6Bw+6Fo037fKqq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "WbcJbwer6IXG"
       },
       "source": [
-        "#All the practice problem of Python from HackerRank will be placed here."
+        "#All the practice problem of Python from HackerRank."
       ]
     },
     {
@@ -57,7 +57,7 @@
       "source": [
         "print(\"Hello, World!\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,19 +78,43 @@
         "###If n is odd, print 'Weird'\n",
         "###If n is even and in the inclusive range of 2 to 5, print 'Not Weird'\n",
         "###If n is even and in the inclusive range of 6 to 20, print 'Weird'\n",
-        "###If n is even and greater than 20 , print 'Not Weird'"
+        "###If n is even and greater than 20 , print 'Not Weird'\n",
+        "for full problem click [here](https://www.hackerrank.com/challenges/py-if-else/problem)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cmo7lYts8xbs"
+        "id": "cmo7lYts8xbs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "37ef139f-6128-4cf0-da88-f39017b8d338"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "n>=0 and n<=100\n",
+        "if n%2!=0:\n",
+        "  print('Weird')\n",
+        "else:\n",
+        "  if n>=2 and n<=5:\n",
+        "    print('Not Weird')\n",
+        "  elif n>=6 and n<=20:\n",
+        "    print('Weird')\n",
+        "  else:\n",
+        "    print('Not Weird')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "Weird\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
