--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPqiRHqMR6Bw+6Fo037fKqq",
+      "authorship_tag": "ABX9TyPvOPHtMTiDdwFDpbeioKY5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,6 +114,19 @@
             "Weird\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KLiVj5yDT_C-"
+      },
+      "source": [
+        "##Problem 3. The provided code stub reads two integers from STDIN,  and . Add code to print three lines where:\n",
+        "##The first line contains the sum of the two numbers.\n",
+        "##The second line contains the difference of the two numbers (first - second).\n",
+        "##The third line contains the product of the two numbers.\n",
+        "###for ful problem click [here](https://www.hackerrank.com/challenges/python-arithmetic-operators/problem)"
       ]
     },
     {
