--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPvOPHtMTiDdwFDpbeioKY5",
+      "authorship_tag": "ABX9TyM0wEUn+pa8YAlBenjPBV6j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
         "  else:\n",
         "    print('Not Weird')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,23 +122,47 @@
         "id": "KLiVj5yDT_C-"
       },
       "source": [
-        "##Problem 3. The provided code stub reads two integers from STDIN,  and . Add code to print three lines where:\n",
-        "##The first line contains the sum of the two numbers.\n",
-        "##The second line contains the difference of the two numbers (first - second).\n",
-        "##The third line contains the product of the two numbers.\n",
-        "###for ful problem click [here](https://www.hackerrank.com/challenges/python-arithmetic-operators/problem)"
+        "###Problem 3. The provided code stub reads two integers from STDIN,  and . Add code to print three lines where:\n",
+        "###The first line contains the sum of the two numbers.\n",
+        "###The second line contains the difference of the two numbers (first - second).\n",
+        "###The third line contains the product of the two numbers.\n",
+        "###for full problem click [here](https://www.hackerrank.com/challenges/python-arithmetic-operators/problem)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QGBnB-Wv5mM8"
+        "id": "QGBnB-Wv5mM8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a59214ed-9ae2-4cf7-b497-56cf173ef0b6"
       },
       "source": [
-        ""
+        "if __name__ == '__main__':\n",
+        "    a = int(input())\n",
+        "    b = int(input())\n",
+        "    result1 = a + b\n",
+        "    result2 = a - b\n",
+        "    result3 = a*b\n",
+        "    print(result1)\n",
+        "    print(result2)\n",
+        "    print(result3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "2\n",
+            "5\n",
+            "1\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
