--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0wEUn+pa8YAlBenjPBV6j",
+      "authorship_tag": "ABX9TyMlMQkAc0d/f+1mU2G4sug9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,12 +52,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f290faa-c838-4253-e111-6b96a25aa96c"
+        "outputId": "24de7e40-0b7a-4b57-aafe-47c87cf9f1fe"
       },
       "source": [
         "print(\"Hello, World!\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "37ef139f-6128-4cf0-da88-f39017b8d338"
+        "outputId": "750d078c-6067-4bf6-9a62-055c3477ec4f"
       },
       "source": [
         "n = int(input())\n",
@@ -104,7 +104,7 @@
         "  else:\n",
         "    print('Not Weird')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         "id": "KLiVj5yDT_C-"
       },
       "source": [
-        "###Problem 3. The provided code stub reads two integers from STDIN,  and . Add code to print three lines where:\n",
+        "###**Problem 3**. The provided code stub reads two integers from STDIN,  and . Add code to print three lines where:\n",
         "###The first line contains the sum of the two numbers.\n",
         "###The second line contains the difference of the two numbers (first - second).\n",
         "###The third line contains the product of the two numbers.\n",
@@ -136,7 +136,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a59214ed-9ae2-4cf7-b497-56cf173ef0b6"
+        "outputId": "ae75ef93-34c3-462e-e711-a77d4ce1bf87"
       },
       "source": [
         "if __name__ == '__main__':\n",
@@ -149,17 +149,17 @@
         "    print(result2)\n",
         "    print(result3)"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n",
-            "2\n",
+            "4\n",
             "5\n",
-            "1\n",
-            "6\n"
+            "9\n",
+            "-1\n",
+            "20\n"
           ]
         }
       ]
@@ -176,15 +176,50 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "B2Ns0nPi5l9-"
+        "id": "uSGhCH7O2jZF"
       },
       "source": [
-        ""
+        "###Problem 4:The provided code stub reads two integers, a and b , from STDIN.\n",
+        "###Add logic to print two lines. The first line should contain the result of\n",
+        "###integer division, a//b. The second line should contain the result of float ###division a/b .\n",
+        "\n",
+        "###No rounding or formatting is necessary.\n",
+        "###for full problem click [here](https://www.hackerrank.com/challenges/python-division/problem)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B2Ns0nPi5l9-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7e4ed7c3-6365-495c-b376-5ca2665c6a85"
+      },
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    a = int(input())\n",
+        "    b = int(input())\n",
+        "    result1 = a//b\n",
+        "    result2 = a/b\n",
+        "    print(result1)\n",
+        "    print(result2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n",
+            "5\n",
+            "1\n",
+            "1.6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -194,7 +229,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -205,7 +240,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -216,7 +251,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -227,7 +262,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
