--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlMQkAc0d/f+1mU2G4sug9",
+      "authorship_tag": "ABX9TyNWn4uYq82SvC5gH3zLvOD7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
       "source": [
         "print(\"Hello, World!\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "  else:\n",
         "    print('Not Weird')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +149,7 @@
         "    print(result2)\n",
         "    print(result3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "uSGhCH7O2jZF"
       },
       "source": [
-        "###Problem 4:The provided code stub reads two integers, a and b , from STDIN.\n",
+        "###**Problem 4**:The provided code stub reads two integers, a and b , from STDIN.\n",
         "###Add logic to print two lines. The first line should contain the result of\n",
         "###integer division, a//b. The second line should contain the result of float ###division a/b .\n",
         "\n",
@@ -207,7 +207,7 @@
         "    print(result1)\n",
         "    print(result2)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,15 +222,55 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "tRdFoxDU5l1S"
+        "id": "3W7EPWc5A89C"
       },
       "source": [
-        ""
+        "###**Problem 5**: The provided code stub reads and integer,n, from STDIN. For all non-negative integers i<n, print i^2.\n",
+        "for full problem click [here](https://www.hackerrank.com/challenges/python-loops/problem)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tRdFoxDU5l1S",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49a74907-4946-4253-e0ee-be319d583993"
+      },
+      "source": [
+        "n = int(input())\n",
+        "list_of_integer = list(range(n))\n",
+        "for i in list_of_integer:\n",
+        "  x = i**2\n",
+        "  print(x)"
       ],
-      "execution_count": 6,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "0\n",
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F4r-SmW2DGFo"
+      },
+      "source": [
+        "###**Problem 6**:"
+      ]
     },
     {
       "cell_type": "code",
@@ -240,7 +280,7 @@
       "source": [
         ""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +291,7 @@
       "source": [
         ""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +302,7 @@
       "source": [
         ""
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     }
   ]
