--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWn4uYq82SvC5gH3zLvOD7",
+      "authorship_tag": "ABX9TyMOfntEFc28+b7evfx4luHS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "WbcJbwer6IXG"
       },
       "source": [
-        "#All the practice problem of Python from HackerRank."
+        "#HackerRank practice problem."
       ]
     },
     {
