--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMOfntEFc28+b7evfx4luHS",
+      "authorship_tag": "ABX9TyPewCiruxuJHr8TP+AoYogT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,7 +228,7 @@
       },
       "source": [
         "###**Problem 5**: The provided code stub reads and integer,n, from STDIN. For all non-negative integers i<n, print i^2.\n",
-        "for full problem click [here](https://www.hackerrank.com/challenges/python-loops/problem)\n"
+        "###for full problem click [here](https://www.hackerrank.com/challenges/python-loops/problem)\n"
       ]
     },
     {
@@ -247,7 +247,7 @@
         "  x = i**2\n",
         "  print(x)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,19 +269,55 @@
         "id": "F4r-SmW2DGFo"
       },
       "source": [
-        "###**Problem 6**:"
+        "###**Problem 6**: Determine whether a year is a leap year or not.\n",
+        "### For full problem click [here](https://www.hackerrank.com/challenges/write-a-function/problem)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "80stFVmI5lqr"
+        "id": "80stFVmI5lqr",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b06c1d74-b50c-49eb-87f2-e7659298987e"
       },
       "source": [
-        ""
+        "def is_leap(year):\n",
+        "  1900<=year and year<=10**5\n",
+        "  if year%4==0 or (year%100==0 and year%400==0):\n",
+        "      result = 'True'\n",
+        "  else:\n",
+        "      result = 'False'\n",
+        "  return result        \n",
+        "    \n",
+        "year = int(input())\n",
+        "is_leap(year)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1990\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'False'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -289,7 +325,7 @@
         "id": "dywumJRY5lfH"
       },
       "source": [
-        ""
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
