--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPewCiruxuJHr8TP+AoYogT",
+      "authorship_tag": "ABX9TyNCDsWw5ROjNMnGfAcg6JVt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -295,7 +295,7 @@
         "year = int(input())\n",
         "is_leap(year)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -318,6 +318,27 @@
           "execution_count": 1
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hu-wtBnM33oF"
+      },
+      "source": [
+        "###**Problem 7**: Print Function \n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/python-print/problem)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hfp78Z_04RCn"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
