--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNCDsWw5ROjNMnGfAcg6JVt",
+      "authorship_tag": "ABX9TyOnesJ4VvFYHpMaPS8mcIGI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -332,13 +332,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hfp78Z_04RCn"
+        "id": "hfp78Z_04RCn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "255b82d4-5231-4342-e413-60feea76356a"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "i = range(1,n+1)\n",
+        "for m in i:\n",
+        "    print(m, end = '')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "123"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
