--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOnesJ4VvFYHpMaPS8mcIGI",
+      "authorship_tag": "ABX9TyMcITf11HnGvOPVeTn6vJpQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -344,7 +344,7 @@
         "for m in i:\n",
         "    print(m, end = '')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,12 +357,63 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "dywumJRY5lfH"
+        "id": "dJ_m4h8P2e_y"
       },
       "source": [
-        "\n"
+        "###**Problem 8**: List Compresion\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/list-comprehensions/problem)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dywumJRY5lfH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a8c306d-f6ec-4a15-d883-b938ffbcabef"
+      },
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    x = int(input())\n",
+        "    y = int(input())\n",
+        "    z = int(input())\n",
+        "    n = int(input())\n",
+        "    output = [];\n",
+        "    abc = [];\n",
+        "    for X in range(x+1):\n",
+        "        for Y in range(y+1):\n",
+        "            for Z in range(z+1):\n",
+        "                if X+Y+Z != n:\n",
+        "                    abc = [X,Y,Z];\n",
+        "                    output.append(abc);\n",
+        "    \n",
+        "print(output)\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [0, 1, 2], [0, 2, 1], [0, 2, 2], [1, 0, 0], [1, 0, 2], [1, 1, 1], [1, 1, 2], [1, 2, 0], [1, 2, 1], [1, 2, 2], [2, 0, 1], [2, 0, 2], [2, 1, 0], [2, 1, 1], [2, 1, 2], [2, 2, 0], [2, 2, 1], [2, 2, 2]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ZTp1FkN5lL-"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -370,7 +421,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6ZTp1FkN5lL-"
+        "id": "GyMdLFts3sFU"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Jcnki3H63r30"
       },
       "source": [
         ""
