--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMcITf11HnGvOPVeTn6vJpQ",
+      "authorship_tag": "ABX9TyNCYMZKtRtDo6Pk75zjKep+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,7 +392,7 @@
         "    \n",
         "print(output)\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,20 +408,57 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "6ZTp1FkN5lL-"
+        "id": "4iF3XTt0FeFc"
       },
       "source": [
-        ""
+        "### **Problem 9**: Find the runner up score\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/find-second-maximum-number-in-a-list/problem)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6ZTp1FkN5lL-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1474704d-3d1e-4d14-94c1-301c2e645ced"
+      },
+      "source": [
+        "n = int(input())\n",
+        "arr = map(int, input().split())\n",
+        "print(sorted(list(set(arr)))[-2])\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1 2 3 4 \n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "GyMdLFts3sFU"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l2kKEedjH3bS"
       },
       "source": [
         ""
