--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNCYMZKtRtDo6Pk75zjKep+",
+      "authorship_tag": "ABX9TyPEOYf96QCpibF/pm3mA6eE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "id": "WbcJbwer6IXG"
       },
       "source": [
-        "#HackerRank practice problem."
+        "#**HACKER-RANK PROBLEM**"
       ]
     },
     {
@@ -42,7 +42,7 @@
         "id": "8aoPKIwA8Rys"
       },
       "source": [
-        "### **Problem 1**. Print \"Hello, World!\""
+        "# **Problem 1**. Print \"Hello, World!\""
       ]
     },
     {
@@ -74,11 +74,7 @@
         "id": "RgXXzy2A8ydf"
       },
       "source": [
-        "###**Problem 2.** Given an integer,n, perform the following conditional actions:\n",
-        "###If n is odd, print 'Weird'\n",
-        "###If n is even and in the inclusive range of 2 to 5, print 'Not Weird'\n",
-        "###If n is even and in the inclusive range of 6 to 20, print 'Weird'\n",
-        "###If n is even and greater than 20 , print 'Not Weird'\n",
+        "#**Problem 2.** If else statement\n",
         "for full problem click [here](https://www.hackerrank.com/challenges/py-if-else/problem)"
       ]
     },
@@ -122,10 +118,7 @@
         "id": "KLiVj5yDT_C-"
       },
       "source": [
-        "###**Problem 3**. The provided code stub reads two integers from STDIN,  and . Add code to print three lines where:\n",
-        "###The first line contains the sum of the two numbers.\n",
-        "###The second line contains the difference of the two numbers (first - second).\n",
-        "###The third line contains the product of the two numbers.\n",
+        "#**Problem 3**. Arithmetic Operation\n",
         "###for full problem click [here](https://www.hackerrank.com/challenges/python-arithmetic-operators/problem)"
       ]
     },
@@ -181,11 +174,7 @@
         "id": "uSGhCH7O2jZF"
       },
       "source": [
-        "###**Problem 4**:The provided code stub reads two integers, a and b , from STDIN.\n",
-        "###Add logic to print two lines. The first line should contain the result of\n",
-        "###integer division, a//b. The second line should contain the result of float ###division a/b .\n",
-        "\n",
-        "###No rounding or formatting is necessary.\n",
+        "#**Problem 4**: Division\n",
         "###for full problem click [here](https://www.hackerrank.com/challenges/python-division/problem)"
       ]
     },
@@ -227,7 +216,7 @@
         "id": "3W7EPWc5A89C"
       },
       "source": [
-        "###**Problem 5**: The provided code stub reads and integer,n, from STDIN. For all non-negative integers i<n, print i^2.\n",
+        "#**Problem 5**: Loops\n",
         "###for full problem click [here](https://www.hackerrank.com/challenges/python-loops/problem)\n"
       ]
     },
@@ -269,7 +258,7 @@
         "id": "F4r-SmW2DGFo"
       },
       "source": [
-        "###**Problem 6**: Determine whether a year is a leap year or not.\n",
+        "#**Problem 6**: Determine whether a year is a leap year or not.\n",
         "### For full problem click [here](https://www.hackerrank.com/challenges/write-a-function/problem)"
       ]
     },
@@ -325,7 +314,7 @@
         "id": "hu-wtBnM33oF"
       },
       "source": [
-        "###**Problem 7**: Print Function \n",
+        "#**Problem 7**: Print Function \n",
         "For full problem click [here](https://www.hackerrank.com/challenges/python-print/problem)"
       ]
     },
@@ -362,7 +351,7 @@
         "id": "dJ_m4h8P2e_y"
       },
       "source": [
-        "###**Problem 8**: List Compresion\n",
+        "#**Problem 8**: List Compresion\n",
         "For full problem click [here](https://www.hackerrank.com/challenges/list-comprehensions/problem)"
       ]
     },
@@ -413,7 +402,7 @@
         "id": "4iF3XTt0FeFc"
       },
       "source": [
-        "### **Problem 9**: Find the runner up score\n",
+        "# **Problem 9**: Find the runner up score\n",
         "For full problem click [here](https://www.hackerrank.com/challenges/find-second-maximum-number-in-a-list/problem)"
       ]
     },
@@ -431,7 +420,7 @@
         "arr = map(int, input().split())\n",
         "print(sorted(list(set(arr)))[-2])\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,20 +434,29 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "GyMdLFts3sFU"
+        "id": "N0cDT_ce3Q3Z"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 15,
-      "outputs": []
+        "#**Problem 10**: Nested List"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "l2kKEedjH3bS"
+      },
+      "source": [
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PQ5WTfaLoduW"
       },
       "source": [
         ""
@@ -469,7 +467,73 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jcnki3H63r30"
+        "id": "AGApyLL8x5UM"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HHsdx4jax5Yk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7gum80CHx5cz"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DpAprb-nx5hA"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mWThlwKrx5k_"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tJqS0y1Zx5pD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M-8c_yakx5s7"
       },
       "source": [
         ""
