--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPEOYf96QCpibF/pm3mA6eE",
+      "authorship_tag": "ABX9TyPJaItpaBNJwEQXiBnTfZ6m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -439,19 +439,54 @@
         "id": "N0cDT_ce3Q3Z"
       },
       "source": [
-        "#**Problem 10**: Nested List"
+        "#**Problem 10**: Nested List\n",
+        "For full problem click [here](https://www.hackerrank.com/challenges/nested-list/problem?isFullScreen=false)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l2kKEedjH3bS"
+        "id": "l2kKEedjH3bS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dfe7e827-cf46-4bb9-dd7e-7914f55b7f16"
       },
       "source": [
-        "\n"
+        "score_list = []; # First we will declare the  empty list\n",
+        "\n",
+        "for i in range(int(eval(input()))):\n",
+        "    name = str(input())\n",
+        "    score = float(eval(input())) \n",
+        "\n",
+        "    \n",
+        "    score_list.append([name, score])\n",
+        "second_lowest = sorted(set([score for name, score in score_list]))[1] # sorted function print the values in ascending order.\n",
+        "\n",
+        "print('\\n'.join(sorted([name for name, score in score_list if score == second_lowest])))\n",
+        "#The print statement print the second lowest name of the student who have scored second lowest marks"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "Amit\n",
+            "78.9\n",
+            "Suresj\n",
+            "45.6\n",
+            "Ramesh\n",
+            "12.3\n",
+            "Mangesh\n",
+            "85.2\n",
+            "Vipesh\n",
+            "74.1\n",
+            "Suresj\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -459,7 +494,7 @@
         "id": "PQ5WTfaLoduW"
       },
       "source": [
-        ""
+        " "
       ],
       "execution_count": null,
       "outputs": []
