--- a/HackerRank_Problem.ipynb
+++ b/HackerRank_Problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HackerRank Problem.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPJaItpaBNJwEQXiBnTfZ6m",
+      "authorship_tag": "ABX9TyOk5b5lQA1xxF5d8Joe6OpA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -466,7 +466,7 @@
         "print('\\n'.join(sorted([name for name, score in score_list if score == second_lowest])))\n",
         "#The print statement print the second lowest name of the student who have scored second lowest marks"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,15 +489,62 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "PQ5WTfaLoduW"
+        "id": "VEGxWdSH5S9_"
       },
       "source": [
-        " "
+        "#**Problem 11**: Finding the Percentage\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/finding-the-percentage/problem?isFullScreen=false)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PQ5WTfaLoduW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb6628c1-6ff8-4cb8-c29f-3b6337206278"
+      },
+      "source": [
+        " if __name__ == '__main__':\n",
+        "    n = int(input())\n",
+        "    student_marks = {}\n",
+        "    for _ in range(n):\n",
+        "        name, *line = input().split() #this will give name and list of string of marks\n",
+        "        scores = list(map(float, line)) #converting this list of string into float\n",
+        "        student_marks[name] = scores #gives list of marks of a student by entering name\n",
+        "    query_name = input() #Takes input as a name of a student from user.\n",
+        "    marks = student_marks[query_name] #list of marks of a given student input\n",
+        "    print(format(sum(marks)/3, '.2f')) #for getting values upto 2 decimal places we use format function"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "A 36 25 14\n",
+            "B 47 58 69\n",
+            "C 74 85 96\n",
+            "D 14 47 85 69\n",
+            "C\n",
+            "85.00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oTweinud6DeS"
+      },
+      "source": [
+        "#**Problem 12**: List\n",
+        "full problem click [here](https://www.hackerrank.com/challenges/python-lists/problem?isFullScreen=false)"
+      ]
     },
     {
       "cell_type": "code",
